--- a/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-global-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-ss-fhd-ea8076-global-cmd.dtsi
@@ -67,7 +67,7 @@
 		qcom,disp-doze-lpm-backlight = <20>;
 		qcom,disp-doze-hbm-backlight = <266>;
 		qcom,disp-fod-off-dimming-delay = <85>;
-		qcom,disp-dc-dimlayer-backlight = <260>;
+		qcom,disp-dc-dimlayer-backlight = <580>;
 		qcom,disp-fod-dim-lut = <
 			/* brightness, alpha */
 			0	0xFF
@@ -99,25 +99,25 @@
 			1	0xE0
 			2	0xD6
 			3	0xD5
-			4	0xCf
-			5	0xCb
+			4	0xCF
+			5	0xCB
 			6	0xC9
 			8	0xC5
 			10	0xC1
-			15	0xB6
-			20	0xAc
-			30	0x9D
-			45	0x82
-			70	0x6C
-			100	0x56
-			120	0x47
-			140	0x3A
-			160	0x2F
-			180	0x22
-			200	0x16
-			220	0x0E
-			240	0x06
-			260	0x00
+			20	0xB6
+			40	0xAC
+			70	0x9D
+			100	0x82
+			130	0x6C
+			180	0x56
+			230	0x47
+			280	0x3A
+			330	0x2F
+			380	0x22
+			430	0x16
+			480	0x0E
+			530	0x06
+			580	0x00
 		>;
 
 		qcom,elvss_dimming_check_enable;
