--- a/drivers/power/supply/Makefile
+++ b/drivers/power/supply/Makefile
@@ -85,3 +85,5 @@ obj-$(CONFIG_AXP288_CHARGER)	+= axp288_charger.o
 obj-$(CONFIG_CHARGER_NU1618)	+= rx1618.o
 obj-$(CONFIG_ARCH_QCOM)		+= qcom/
 obj-y 				+= google/
+obj-$(CONFIG_ARCH_QCOM)         += maxim/
+obj-$(CONFIG_ARCH_QCOM)         += ti/
