--- a/arch/arm64/configs/raphael-vts_defconfig
+++ b/arch/arm64/configs/raphael-vts_defconfig
@@ -449,6 +449,9 @@ CONFIG_MACH_XIAOMI_SM8150=y
 #
 # XiaoMi board seletion
 #
+# CONFIG_MACH_XIAOMI_ANDROMEDA is not set
+# CONFIG_MACH_XIAOMI_CEPHEUS is not set
+# CONFIG_MACH_XIAOMI_CRUX is not set
 CONFIG_MACH_XIAOMI_RAPHAEL=y
 
 #
