Bring back cepheus support to Soviet Kernel

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,27 +1,25 @@
 CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_LOCALVERSION="-SOVIET-STAR-"
+CONFIG_LOCALVERSION="-POST-SOVIET-"
 CONFIG_INLINE_OPTIMIZATION=y
 # CONFIG_FHANDLE is not set
-CONFIG_AUDIT=y
-# CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_WALT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=21
+CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
-CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
@@ -39,11 +37,11 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_EMBEDDED=y
+CONFIG_PERF_EVENTS=y
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLUB_CPU_PARTIAL is not set
-CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_LD_LLD=y
@@ -85,7 +83,7 @@ CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=112
 CONFIG_PRIME_CPU_MASK=128
 CONFIG_PREEMPT=y
-CONFIG_HZ_100=y
+CONFIG_HZ_300=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
@@ -110,12 +108,10 @@ CONFIG_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
-# CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -290,6 +286,7 @@ CONFIG_MHI_QCOM=y
 CONFIG_MHI_NETDEV=y
 CONFIG_MHI_UCI=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
@@ -413,9 +410,6 @@ CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
-CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE_PALMSENSOR=y
-CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE_GAMEMODE=y
 CONFIG_TOUCHSCREEN_ST_FTS_V521=y
 CONFIG_FTS_FOD_AREA_REPORT=y
 CONFIG_TOUCHSCREEN_ST_DEBUG_FS=y
@@ -482,9 +476,11 @@ CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
+# CONFIG_RC_CORE is not set
 CONFIG_LIRC=y
 CONFIG_RC_DEVICES=y
 CONFIG_IR_SPI=y
+CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
@@ -642,10 +638,11 @@ CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
 CONFIG_QCOM_QDSS_BRIDGE=y
+CONFIG_QTI_RPM_STATS_LOG=y
+CONFIG_TRUSTY=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
-CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_PM=y
 # CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION is not set
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
@@ -670,7 +667,7 @@ CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
 CONFIG_DEVFREQ_CPU_LLCC_DDR_BW_BOOST_FREQ=3879
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
-CONFIG_US_PROXIMITY=y
+# CONFIG_US_PROXIMITY=y
 CONFIG_PWM=y
 CONFIG_PWM_QTI_LPG=y
 CONFIG_QCOM_KGSL=y
@@ -682,7 +679,6 @@ CONFIG_ANDROID_BINDERFS=y
 CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_SENSORS_SSC=y
-CONFIG_TRUSTY=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -690,6 +686,7 @@ CONFIG_EXT4_ENCRYPTION=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_IOSTAT is not set
 CONFIG_F2FS_REPORT_FAKE_KERNEL_VERSION=y
 CONFIG_F2FS_FAKE_KERNEL_RELEASE="4.14.117-perf-g66aed98"
 CONFIG_F2FS_FAKE_KERNEL_VERSION="#1 SMP PREEMPT Wed Dec 9 16:54:14 CST 2020"
@@ -721,11 +718,12 @@ CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
 # CONFIG_MAGIC_SYSRQ_SERIAL is not set
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=-1
+# CONFIG_SCHED_DEBUG is not set
 CONFIG_FTRACE=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 # CONFIG_UPROBE_EVENTS is not set
 # CONFIG_TRACING_EVENTS_GPIO is not set
-CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE=y
+CONFIG_MINIMAL_TRACING_FOR_IORAP=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
@@ -734,6 +732,7 @@ CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 # CONFIG_INTEGRITY is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_XCBC=y
@@ -745,6 +744,7 @@ CONFIG_CRYPTO_DRBG_CTR=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_CRYPTO_DEV_VIRTIO=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -785,14 +785,12 @@ CONFIG_SND_SOC_TAS2557=y
 CONFIG_SND_SOC_WCD934X=y
 CONFIG_SND_SOC_WCD934X_DSD=y
 CONFIG_SND_SOC_WCD934X_MBHC=y
-CONFIG_SND_SOC_WCD9360=y
 CONFIG_SND_SOC_WCD9XXX_V2=y
 CONFIG_SND_SOC_WCD_CPE=y
 CONFIG_SND_SOC_WCD_DSP_MGR=y
 CONFIG_SND_SOC_WCD_MBHC=y
 CONFIG_SND_SOC_WCD_MBHC_ADC=y
 CONFIG_SND_SOC_WCD_SPI=y
-CONFIG_SND_SOC_WSA881X=y
 CONFIG_SOUNDWIRE=y
 CONFIG_SOUNDWIRE_WCD_CTRL=y
 CONFIG_TAS2557_REGMAP=y
