--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -476,8 +476,11 @@ CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
-# CONFIG_RC_CORE is not set
+CONFIG_RC_CORE=y
+CONFIG_RC_MAP=y
+CONFIG_RC_DECODERS=y
 CONFIG_LIRC=y
+CONFIG_IR_LIRC_CODEC=y
 CONFIG_RC_DEVICES=y
 CONFIG_IR_SPI=y
 CONFIG_IR_MSM_GENI=y
