ARM64: configs: cepheus: regen

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -16,11 +16,13 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_PELT_UTIL_HALFLIFE_16=y
+CONFIG_UCLAMP_TASK=y
+CONFIG_UCLAMP_BUCKETS_COUNT=20
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_CGROUPS=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
+CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
@@ -29,7 +31,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 # CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_TUNE=y
+CONFIG_SCHED_TUNE_DUMMY=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_IGNORE_SKIP_FLAG=y
@@ -37,7 +39,6 @@ CONFIG_INITRAMFS_IGNORE_SKIP_FLAG=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
 # CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_KALLSYMS is not set
 CONFIG_BPF_SYSCALL=y
@@ -95,6 +96,9 @@ CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_VMSTAT_INTERVAL=20
+CONFIG_OPLUS_MM_HACKS=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 CONFIG_SECCOMP=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
@@ -293,6 +297,7 @@ CONFIG_MHI_NETDEV=y
 CONFIG_MHI_UCI=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_DEDUP=y
+CONFIG_ZRAM_ENTROPY=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
@@ -432,6 +437,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_DEVMEM is not set
 CONFIG_SERIAL_MSM_GENI=y
 CONFIG_SRANDOM=y
+# CONFIG_HW_RANDOM_CAVIUM is not set
 # CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
 CONFIG_DIAG_CHAR=y
@@ -718,6 +724,7 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
+CONFIG_EROFS_FS=y
 # CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_PRINTK_TIME=y
 CONFIG_FRAME_WARN=0
@@ -730,11 +737,7 @@ CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=-1
 # CONFIG_SCHED_DEBUG is not set
-CONFIG_FTRACE=y
-CONFIG_ENABLE_DEFAULT_TRACERS=y
-# CONFIG_UPROBE_EVENTS is not set
-# CONFIG_TRACING_EVENTS_GPIO is not set
-CONFIG_MINIMAL_TRACING_FOR_IORAP=y
+CONFIG_STACKTRACE=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
@@ -749,6 +752,7 @@ CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DRBG_HASH=y
 CONFIG_CRYPTO_DRBG_CTR=y
@@ -810,4 +814,3 @@ CONFIG_TAS2557_MISC=y
 CONFIG_VOICE_MHI=y
 CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
-CONFIG_BOEFFLA_WL_BLOCKER=y
