--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1443,4 +1443,14 @@ config TOUCHSCREEN_RAYDIUM_CHIPSET
 
 	  If unsure, say N.
 
+config TOUCHSCREEN_NT36XX
+        bool "nt36xxx Touchscreen Driver"
+        depends on I2C
+        help
+          Say Y here if you have a nt36xxx Touchscreen.
+
+          If unsure, say N.
+
+source "drivers/input/touchscreen/nt36xxx/Kconfig"
+
 endif
