cepheus_defconfig: Sync changes
* Enable F2FS Compression.
* Enable UNICODE.
* Remove OPLUS Memory Management hacks ( since impl. was reverted on c89ee9365b819b39f63f9d5ff296be547d367f15 ).

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,5 +1,5 @@
 CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_LOCALVERSION="-POST-SOVIET-"
+CONFIG_LOCALVERSION="-MISORA-"
 CONFIG_INLINE_OPTIMIZATION=y
 # CONFIG_FHANDLE is not set
 CONFIG_NO_HZ=y
@@ -30,7 +30,6 @@ CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
-# CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE_DUMMY=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
@@ -92,8 +91,6 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
-CONFIG_VMSTAT_INTERVAL=20
-CONFIG_OPLUS_MM_HACKS=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_SECCOMP=y
@@ -668,6 +665,7 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_F2FS_FS_COMPRESSION=y
+CONFIG_EROFS_FS=y
 # CONFIG_F2FS_FS_LZ4HC is not set
 # CONFIG_F2FS_IOSTAT is not set
 CONFIG_F2FS_REPORT_FAKE_KERNEL_VERSION=y
@@ -691,8 +689,8 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
-CONFIG_EROFS_FS=y
 # CONFIG_NETWORK_FILESYSTEMS is not set
+CONFIG_UNICODE=y
 CONFIG_PRINTK_TIME=y
 CONFIG_FRAME_WARN=0
 CONFIG_STRIP_ASM_SYMS=y
