--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,5 +1,5 @@
 CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_LOCALVERSION="-MISORA-"
+CONFIG_LOCALVERSION="-POST-SOVIET-"
 CONFIG_INLINE_OPTIMIZATION=y
 # CONFIG_FHANDLE is not set
 CONFIG_NO_HZ=y
