Revert "[ReApply] arm64: dts: Switch to step_wise thermal governor"
This reverts commit 19fa8dc4294e612a1e9ff0c601d37b186603e1fc.

--- a/arch/arm64/boot/dts/qcom/cepheus-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/cepheus-sm8150.dtsi
@@ -572,7 +572,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	wp_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150b_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -586,7 +586,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	xo_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150_adc_tm ADC_XO_THERM_PU2>;
 		trips {
 			active-config0 {
@@ -600,7 +600,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
         quiet_therm {
                 polling-delay-passive = <0>;
                 polling-delay = <0>;
-                thermal-governor = "step_wise";
+                thermal-governor = "user_space";
                 thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM1_PU2>;
                 trips {
                        active-config0 {
@@ -614,7 +614,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
         pa_therm0 {
                 polling-delay-passive = <0>;
                 polling-delay = <0>;
-                thermal-governor = "step_wise";
+                thermal-governor = "user_space";
                 thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM2_PU2>;
                 trips {
                        active-config0 {
@@ -628,7 +628,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -642,7 +642,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -656,7 +656,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM3_PU2>;
 		trips {
 			active-config0 {
