--- a/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
@@ -611,7 +611,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	wp_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150b_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -625,7 +625,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	xo_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150_adc_tm ADC_XO_THERM_PU2>;
 		trips {
 			active-config0 {
@@ -672,7 +672,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	quiet_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -686,7 +686,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -700,7 +700,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -714,7 +714,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -728,7 +728,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "step_wise";
+		thermal-governor = "user_space";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM3_PU2>;
 		trips {
 			active-config0 {
