Revert "Revert "arm64: dts: Switch to `step_wise` thermal governor""
This reverts commit f2c6f8f602917c6a75314a15b08d45bf45a699d1.

--- a/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
@@ -588,7 +588,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	wp_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150b_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -602,7 +602,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	xo_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150_adc_tm ADC_XO_THERM_PU2>;
 		trips {
 			active-config0 {
@@ -616,7 +616,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	quiet_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -630,7 +630,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -644,7 +644,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -658,7 +658,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -672,7 +672,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM3_PU2>;
 		trips {
 			active-config0 {
