--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -18,7 +18,7 @@ CONFIG_LOG_BUF_SHIFT=21
 CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=20
-# CONFIG_UCLAMP_ASSIST is not set
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_CGROUPS=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
