--- a/arch/arm64/boot/dts/qcom/dsi-panel-samsung-fhd-ea8076-f1-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-samsung-fhd-ea8076-f1-cmd.dtsi
@@ -90,6 +90,33 @@
 			2000	0x24
 			2047	0x21
 		>;
+		
+		qcom,dc-dim-lut = <
+			/* brightness, alpha */
+			0	0xFF
+			1	0xE0
+			2	0xD6
+			3	0xD5
+			4	0xCF
+			5	0xCB
+			6	0xC9
+			8	0xC5
+			10	0xC1
+			20	0xB6
+			40	0xAC
+			70	0x9D
+			100	0x82
+			130	0x6C
+			180	0x56
+			230	0x47
+			280	0x3A
+			330	0x2F
+			380	0x22
+			430	0x16
+			480	0x0E
+			530	0x06
+			580	0x00
+		>;
 
 		qcom,elvss_dimming_check_enable;
 		qcom,mdss-dsi-panel-elvss-dimming-read-length = <1>;
