--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -462,7 +462,7 @@ CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_NPU=y
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_DRM=y
-CONFIG_EXPOSURE_ADJUSTMENT=y
+# CONFIG_EXPOSURE_ADJUSTMENT=y is not set
 CONFIG_DRM_SDE_RSC=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
