arm64: configs: cepheus, raphael: Enable EROFS per-cpu kthreads

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -665,6 +665,8 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_F2FS_FS_COMPRESSION=y
 CONFIG_EROFS_FS=y
+CONFIG_EROFS_FS_PCPU_KTHREAD=y
+CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI=y
 # CONFIG_F2FS_FS_LZ4HC is not set
 # CONFIG_F2FS_IOSTAT is not set
 CONFIG_F2FS_REPORT_FAKE_KERNEL_VERSION=y
